# mexc-mcp

./: .gitignore  CLAUDE.md  Makefile  pyproject.toml
src/mexc_mcp/: __init__.py  config.py  errors.py  modes.py  server.py
src/mexc_mcp/client/: __init__.py  auth.py  base.py  futures.py  spot.py  wallet.py
src/mexc_mcp/models/: __init__.py  account.py  common.py  futures.py  market.py  wallet.py
src/mexc_mcp/tools/: __init__.py  account.py  futures.py  market.py  trading.py  wallet.py
tests/: conftest.py
tests/integration/: test_client.py  test_public.py  test_server.py
tests/unit/: test_auth.py  test_models.py  test_modes.py  test_tools.py
